force-app/main/default/objects/DC_Fiber_Pair__c/DC_Fiber_Pair__c.object-meta.xml
<CustomObject>
    <label>Fiber Pair</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fiber Pairs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>