force-app/main/default/objects/DC_Fiber_Pair__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Asset allocated to this Fiber Pair.</description>
    <label>Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Fiber Pairs</relationshipLabel>
    <relationshipName>Fiber_Pairs</relationshipName>
    <type>Lookup</type>
</CustomField>