force-app/main/default/objects/DC_Fiber_Pair__c/fields/Cabinet__c.field-meta.xml
<CustomField>
    <fullName>Cabinet__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Cabinet this Fiber Pair is connected to.</description>
    <label>Cabinet</label>
    <referenceTo>DC_Cabinet__c</referenceTo>
    <relationshipLabel>Fiber Pairs</relationshipLabel>
    <relationshipName>Fiber_Pairs</relationshipName>
    <type>Lookup</type>
</CustomField>