force-app/main/default/objects/DC_Fiber_Pair__c/fields/Committed_Service_Order__c.field-meta.xml
<CustomField>
    <fullName>Committed_Service_Order__c</fullName>
    <description>The Service Order that resulted in this Fiber Pair to be under contract. This will be provided as additional Assets are created. Hyperlink to related Service Order from the Asset record that caused this creation.</description>
    <label>Committed Service Order</label>
    <length>255</length>
    <type>Text</type>
</CustomField>