force-app/main/default/objects/DC_Fiber_Pair__c/fields/Home_Run__c.field-meta.xml
<CustomField>
    <fullName>Home_Run__c</fullName>
    <label>Home Run</label>
    <referenceTo>DC_Homerun__c</referenceTo>
    <relationshipLabel>Fiber Pairs</relationshipLabel>
    <relationshipName>Fiber_Pairs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>