force-app/main/default/objects/DC_Fiber_Pair__c/fields/Port__c.field-meta.xml
<CustomField>
    <fullName>Port__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Port this Fiber Pair is connected to.</description>
    <label>Port</label>
    <referenceTo>DC_Port__c</referenceTo>
    <relationshipLabel>Fiber Pairs</relationshipLabel>
    <relationshipName>Fiber_Pairs</relationshipName>
    <type>Lookup</type>
</CustomField>