force-app/main/default/objects/DC_Fiber_Pair__c/fields/Related_MRI_Suite_ID__c.field-meta.xml
<CustomField>
    <fullName>Related_MRI_Suite_ID__c</fullName>
    <formula>HYPERLINK(&apos;/&apos; &amp;   Cabinet__r.Id,  Cabinet__r.MRI_Suite_ID__c, &quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related MRI Suite ID</label>
    <type>Text</type>
</CustomField>