force-app/main/default/objects/DC_Fiber_Pair__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>If committed, there is an associated contract allowing customer access to this fiber pair.</description>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Committed</fullName>
            </value>
            <value>
                <fullName>Not Committed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>